Reduce upload and download code complexity